--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    <ul id="navigation">
      <li><a href="https://www.facebook.com/abdullah.faiz.351" target="_blank">Facebook</a></li>
       <li><a href="https://www.youtube.com/channel/UC3G1IWuiXw15ER_mm20XgnA" target="_blank">Youtube Channel</a></li>
-       <li><a href="https://drive.google.com/file/d/1_k_fs7Dbek2MQVGfGhHhXGdmxeTl8L3W/view?usp=sharing">CV</a></li>
+       <li><a href="https://drive.google.com/file/d/1_k_fs7Dbek2MQVGfGhHhXGdmxeTl8L3W/view?usp=sharing" target="_blank">CV</a></li>
       
    </ul>
  
